--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,3 +231,35 @@ footer{
    padding: 1rem;
    position: relative;
 }
+
+
+@media (max-width: 520px) {
+   
+   main, header, section, footer {
+       max-width: 520px;
+   }
+   #home, #sobre, #lista, #perg, #contato {
+       flex-direction: column;
+       text-align: center;
+       height: auto;
+   }
+
+   .menu-navegacao {
+       flex-direction: column;
+       gap: 20px;
+       margin-right: 0;
+   }
+
+   .img img, #sobre img, #lista img, #perg img, #contato img {
+       width: 80%;
+   }
+
+   .button {
+       width: 50vw;
+   }
+
+   .box-perg, .box-contato {
+       flex-direction: column;
+       gap: 20px;
+   }
+}
