--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 }
 
 * {
+   zoom: 1;
    font-family: Arimo, Arial, Helvetica, sans-serif;
    font-size: 16px;
    line-height: 1.75;
@@ -24,6 +25,7 @@
 }
 
 body {
+
    background-color: var(--cor-fundo-escuro);
 }
 
